fixes desktop overlap in some cases

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -88,7 +88,7 @@ button:hover {
   }
   
   button {
-      bottom: 10vh;
+      bottom: 0vh;
   }
 }
 
